--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-responsive-3d-carousel": "^1.4.3",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
